--- a/packages/vpw-core/package.json
+++ b/packages/vpw-core/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/certiman/vpw-core.git",
+    "url": "https://github.com/certiman/vpw.git",
     "directory": "packages/vpw-core"
   },
   "keywords": [
